# breakOutTec

./: CMakeLists.txt  Client.java  MainClient.java  Makefile  README.md  SingletonSocketServer.java  SpectatorClient.java  constants.h  main.c
cliente/: constants.h  espectador.c  main.c
servidor/: ClientHandler.java  NonBlockingServer.java  Server.java  UpdateService.java  manifest.txt
